vendor/mico-2.3.2/test/idl/error/expected-stderr-case19.idl
case19.idl:7: bad #pragma directive
